--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="wrapper">
+<div class="wrapper">
     <div class="sidebar" data-background-color="white" data-active-color="danger">
         <sidebar-cmp></sidebar-cmp>
     </div>
@@ -10,7 +10,4 @@
         <footer-cmp></footer-cmp>
     </div>
 </div>
-<fixedplugin-cmp></fixedplugin-cmp> -->
- <button routerLink="/login">Login</button>  
- <!-- <app-login></app-login>  -->
-<router-outlet></router-outlet>
+<fixedplugin-cmp></fixedplugin-cmp>
