--- a/src/assets/css/paper-dashboard.css
+++ b/src/assets/css/paper-dashboard.css
@@ -473,7 +473,7 @@ hr {
 .off-canvas-sidebar:before,
 .off-canvas-sidebar[data-background-color="white"]:after,
 .off-canvas-sidebar[data-background-color="white"]:before {
-  background-color: rgba(255, 255, 255,.5);
+  background-color: #FFFFFF;
 }
 .sidebar .logo, .sidebar[data-background-color="white"] .logo,
 .off-canvas-sidebar .logo,
@@ -552,6 +552,7 @@ hr {
 }
 
 .main-panel {
+  background-color: #f4f3ef;
   position: relative;
   z-index: 2;
   float: right;
